# swm

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindXCB.cmake
include/: xdg.hpp
include/config/: config.h  programs_config.h
src/: main.cpp
